# whisper-clip

./: .gitignore  README.md  package.json
docs/superpowers/plans/: 2026-03-26-whisper-clip.md
docs/superpowers/specs/: 2026-03-26-whisper-clip-design.md
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: api.rs  audio.rs  clipboard.rs  config.rs  encoder.rs  hotkey.rs  main.rs  state.rs
src-tauri/tests/: api_test.rs  config_test.rs  encoder_test.rs  state_test.rs
