[package]
name = "whisper-clip"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.24"
core-foundation = "0.10"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
arboard = "3"

[dev-dependencies]
tempfile = "3"
